# Little-cuda-sample

./: CMakeLists.txt  README.md
include/: my_project.h
lib/: CMakeLists.txt  my_lib.cpp  my_lib_impl.h
src/main/: helper.cpp  main.cpp
test/: makefile  run.sh  test  test_device.cu  test_host.cpp
